registration small pages bug fixes

--- a/src/pages/registration/components/StepFive/styles.module.scss
+++ b/src/pages/registration/components/StepFive/styles.module.scss
@@ -29,6 +29,10 @@
     width: 100%;
     position: relative;
 
+    @include media-breakpoint-up("lg") {
+      width: unset;
+    }
+
     & span {
       position: absolute;
       top: 50%;
