--- a/src/pages/registration/components/StepTwo/styles.module.scss
+++ b/src/pages/registration/components/StepTwo/styles.module.scss
@@ -42,6 +42,10 @@
     width: 100%;
     position: relative;
 
+    @include media-breakpoint-up("lg") {
+      width: unset;
+    }
+
     & input {
       width: 100%;
       background: #ffffff 0% 0% no-repeat padding-box;
@@ -75,7 +79,7 @@
       right: 6px;
 
       @include media-breakpoint-up("lg") {
-        right: 16px;
+        right: 7px;
       }
     }
   }
